# borpa

./: Cargo.toml  README.md  config.example.toml
.github/workflows/: ci.yml
borpa-bot/: Cargo.toml  README.md  config.example.toml
borpa-bot/src/: config.rs  constants.rs  main.rs
borpa-bot/src/commands/: mod.rs
borpa-bot/src/commands/misc/: ping.rs
borpa-commands/: Cargo.toml  README.md
borpa-commands/src/: command.rs  context.rs  handler.rs  lib.rs
borpa-utils/: Cargo.toml  README.md
borpa-utils/src/: lib.rs  macros.rs
