[package]
name = "borpa-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }

twilight-http = "0.7.0"
twilight-model = "0.7.0"
twilight-util = { version = "0.7.0", features = ["builder"] }

serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"

lazy_static = "1.4"

[dependencies.borpa-commands]
path = "../borpa-commands"

[dependencies.borpa-utils]
path = "../borpa-utils"

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"
